Update deploy section

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -181,7 +181,7 @@ deploy:
     prerelease: false
     on:
       branch: win                   # release from this branch only
-      APPVEYOR_REPO_TAG: true       # deploy on tag push only
+#      APPVEYOR_REPO_TAG: true       # deploy on tag push only
 
 after_build:
   - ps: Get-ChildItem SWIG\_m2crypto_wrap.c | % { Push-AppveyorArtifact $_.FullName -FileName $_.Name }
